# GANResearch

./: .flake8  LICENSE.txt  Makefile  classify.py  full_test.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
ganresearch/dataloader/: dataloader.py
ganresearch/datasets/: datasets.py
ganresearch/evaluation/: compare_models.py  eval.py  fid_score.py
ganresearch/losses/: cgan_loss.py  dcgan_loss.py  losses.py  wgangp_loss.py
ganresearch/models/: base_gan.py  cgan.py  dcgan.py  gan_factory.py  wgan_gp.py
ganresearch/training/: base_trainer.py  cgan_trainer.py  dcgan_trainer.py  optimizer.py  trainer.py  wgan_gp_trainer.py
ganresearch/utils/: custom_logger.py  process_custom_data_file.py  utils.py
notebook/: DCGAN.ipynb  Untitled.ipynb  VAE_cGAN.ipynb  VAE_cGAN_(3) (1).ipynb  WGAN.ipynb  cGAN.ipynb
